# media-remote

./: .gitmodules  Cargo.toml  README.md  build.sh
.github/workflows/: main.yml
assets/: nowPlaying.jxa
src/: c_functions.rs  helpers.rs  lib.rs  main.rs  nowPlaying.jxa  now_playing.rs  types.rs
src/high_level/: controller.rs  mod.rs  now_playing.rs  now_playing_jxa.rs  now_playing_perl.rs  subscription.rs
src/low_level/: c_functions.rs  execute_jxa.rs  low_level.rs  mod.rs  nowPlaying.jxa
src/utils/: helpers.rs  types.rs
tests/: test.rs  test_helpers.rs  test_low_level.rs  test_now_playing.rs  test_now_playing_jxa.rs  test_now_playing_perl.rs
