[package]
name = "media-remote"
version = "0.1.2"
license = "MIT"
description = "Bindings for MediaRemote.framework"
readme = "README.md"
repository = "https://github.com/nohackjustnoobb/media-remote"
keywords = ["macos", "media-remote", "bindings"]
exclude = [".*"]
edition = "2021"

[dependencies]
block2 = "0.6.0"
dispatch2 = "0.2.0"
image = "0.25.5"
objc2 = "0.6.0"
objc2-app-kit = "0.3.0"
objc2-core-foundation = "0.3.0"
objc2-foundation = "0.3.0"

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]