[package]
name = "media-remote"
version = "0.3.5"
license = "MIT"
description = "Bindings for MediaRemote.framework"
readme = "README.md"
repository = "https://github.com/nohackjustnoobb/media-remote"
keywords = ["macos", "media-remote", "bindings"]
exclude = [".*"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
block2 = "0.6.0"
dispatch2 = "0.2.0"
flate2 = "1.1.8"
image = "0.25.5"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.24.0"

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
